@@ -4,6 +4,7 @@ Improved invalid MPX data error handling and reporting.
 Added BaseCalendar.getDate method to allow end dates to be calculated based on a start date and a duration of working time.
 Made MPXDateFormat implement java.io.Serializable to allow MPXDate to serialize correctly.
 Updated the ant build file to allow MPXJ to be built without the components that depend on JAXB
+Fixed a problem with writing MS Project compatible MSPDI XML files in non-GMT timezones.
 
 Version 0.0.17
 Fixed a bug where a decimal point was being appended to the currency format even if no decimal digits were required.
